cambiato a marco-pages

--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ author :
   twitter : pachialu
   feedburner : nil
 
-production_url : http://pachialu.github.io/marco
+production_url : http://pachialu.github.io/marco-pages
 
 # Tell Github to use the kramdown markdown interpreter
 # (see https://help.github.com/articles/migrating-your-pages-site-from-maruku)
-markdown: kramdown
+# markdown: kramdown
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -49,7 +49,7 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-  BASE_PATH : http://pachialu.github.io/marco
+  BASE_PATH : http://pachialu.github.io/marco-pages
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
