--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # For more see: https://github.com/mojombo/jekyll/wiki/Permalinks
 permalink: /:categories/:year/:month/:day/:title 
 
-exclude: [".rvmrc", ".rbenv-version", "ReadMe.md", "Rakefile", "changelog.md", "License.md"]
+exclude: ["ReadMe.md", "Rakefile", "License.md"]
 highlighter: pygments
 
 # Themes are encouraged to use these universal variables 
@@ -16,7 +16,7 @@ author :
   twitter : pachialu
   feedburner : nil
 
-production_url : http://pachialu.github.io/marco-pages
+production_url : http://pachialu.github.io/marco_pages
 
 # Tell Github to use the kramdown markdown interpreter
 # (see https://help.github.com/articles/migrating-your-pages-site-from-maruku)
@@ -49,7 +49,7 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-  BASE_PATH : http://pachialu.github.io/marco-pages
+  BASE_PATH : http://pachialu.github.io/marco_pages
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
