add twitter theme

--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,7 @@ JB :
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
   #
+  theme: twitter
   # Override this by defining an absolute path to assets here.
   # ex: 
   #   http://s3.amazonaws.com/yoursite/themes/watermelon
