--- a/_config.yml
+++ b/_config.yml
@@ -54,13 +54,12 @@ JB :
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
   #
-  theme: twitter
   # Override this by defining an absolute path to assets here.
   # ex: 
   #   http://s3.amazonaws.com/yoursite/themes/watermelon
   #   /assets
   #
-  ASSET_PATH : http://pachialu.github.io/marco_pages/assets/themes/twitter
+  # ASSET_PATH : http://pachialu.github.io/marco_pages/assets/themes/twitter
 
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change them here if needed.
